tests/escript/scripts/escript_invalid_not_defined.py.out
Error in script: At line 2, NameError: name 'Hello' is not defined