tests/escript/scripts/escript_invalid_not_defined.py
# python3;failure
print(Hello)